md-docs/cloud-registry/cli-ref/v1/registry/list.md
[Документация Yandex Cloud](../../../../index.md) > [Yandex Cloud Registry](../../../index.md) > [Справочник CLI (англ.)](../../index.md) > [v1](../index.md) > [registry](index.md) > list

# yc cloud-registry v1 registry list

Retrieves the list of Registry resources in the specified folder.

#### Command Usage

Syntax:

`yc cloud-registry v1 registry list <FOLDER-ID>`

#### Flags

#|
||Flag | Description ||
|| `--folder-id` | `string`

ID of the folder to list registries in. To get the folder ID use a [yandex.cloud.resourcemanager.v1.FolderService.List] request. ||
|| `--limit` | `int`

The maximum number of results per page to return. If the number of available results is larger than [page_size], the service returns a [ListRegistriesResponse.next_page_token] that can be used to get the next page of results in subsequent list requests. Default value: 10. ||
|| `--page-token` | `string`

Page token. To get the next page of results, set [page_token] to the [ListRegistriesResponse.next_page_token] returned by a previous list request. ||
|| `--name-filter` | `string`

Filter by registry name. The expression must specify: 1. The field name 2. An operator: =, !=. 3. The value in double quotes. Examples: name = "my-registry" name != "my-registry" No regular expressions allowed. ||
|| `--kind` | `shorthand/json`

Match by registry kind (for example DOCKER, MAVEN, NPM). Empty list means any kind.

{% cut "Shorthand Syntax" %}

```hcl
[
  MAVEN|NPM|DOCKER|DEBIAN|NUGET|PYPI|BINARY|GO, ...
]
```

{% endcut %}

{% cut "JSON Syntax" %}

```json
[
  "MAVEN|NPM|DOCKER|DEBIAN|NUGET|PYPI|BINARY|GO", ...
]
```

{% endcut %} ||
|| `--type` | `shorthand/json`

Match by registry type (for example LOCAL, REMOTE). Empty list means any type.

{% cut "Shorthand Syntax" %}

```hcl
[
  LOCAL|REMOTE|VIRTUAL|TRANSITIONAL, ...
]
```

{% endcut %}

{% cut "JSON Syntax" %}

```json
[
  "LOCAL|REMOTE|VIRTUAL|TRANSITIONAL", ...
]
```

{% endcut %} ||
|| `--status` | `shorthand/json`

Match by registry status. Empty list means any status.

{% cut "Shorthand Syntax" %}

```hcl
[
  CREATING|ACTIVE|DELETING, ...
]
```

{% endcut %}

{% cut "JSON Syntax" %}

```json
[
  "CREATING|ACTIVE|DELETING", ...
]
```

{% endcut %} ||
|#

#### Global Flags

#|
||Flag | Description ||
|| `--profile` | `string`

Set the custom profile. ||
|| `--region` | `string`

Set the region. ||
|| `--cloud-id` | `string`

Set the ID of the cloud to use. ||
|| `--folder-name` | `string`

Set the name of the folder to use (will be resolved to id). ||
|| `--debug` | Debug logging. ||
|| `--debug-grpc` | Debug gRPC logging. Very verbose, used for debugging connection problems. ||
|| `--no-user-output` | Disable printing user intended output to stderr. ||
|| `--pager` | `string`

Set the custom pager. ||
|| `--no-pager` | Do not pipe help output through a pager. ||
|| `--format` | `string`

Set the output format: text, yaml, json, table, summary \|\| summary[name, instance.id, instance.disks[0].size]. ||
|| `--retry` | `int`

Enable gRPC retries. By default, retries are enabled with maximum 5 attempts.
Pass 0 to disable retries. Pass any negative value for infinite retries.
Even infinite retries are capped with 2 minutes timeout. ||
|| `--timeout` | `string`

Set the timeout. ||
|| `--token` | `string`

Set the IAM token to use. ||
|| `--impersonate-service-account-id` | `string`

Set the ID of the service account to impersonate. ||
|| `--no-browser` | Disable opening browser for authentication. ||
|| `--query` | `string`

Query to select values from the response using jq syntax ||
|| `--print-metadata` | Print operation metadata along with result. ||
|| `--syntax` | `string`

Choose syntax option. ||
|| `--cli-auto-prompt` | `string[="on"]`

Enable interactive auto-prompt mode. Values: on, partial, off. Bare --cli-auto-prompt is equivalent to --cli-auto-prompt=on. ||
|| `--no-cli-auto-prompt` | Disable interactive auto-prompt mode (overrides --cli-auto-prompt, env and profile). ||
|| `-h`, `--help` | Display help for the command. ||
|#